2003-06-24  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/*: Refactor many HBCI functions to
	eventually enable queued processing of several HBCI jobs.

2003-06-23  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c: Limit the commodity choices
	based upon the current account type.

	* src/gnome-utils/dialog-commodity.c: Add a new argument to the
	dialog creation functions to specify what types of commodities
	should be presented.  Also tweak the title of the dialog based
	upon this argument.  Remove the "new" button when the dialog is
	limited strictly to currencies.

	* src/gnome-utils/gnc-commodity-edit.c:
	* src/import-export/binary-import/druid-commodity.c: 
	* src/import-export/import-commodity-matcher.c: 
	* src/import-export/qif-import/druid-qif-import.c: Updated for new
	commodity dialog argument.

2003-06-22  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-commodity.[ch]: Clean up usage of the
	gnc_ui_update_namespace_picker function.

2003-06-22  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/category-barchart.scm: Properly
	  reverse the balances of accounts instead of using the internal
	  functions to determine when to reverse.  Fixes #115268.

	* src/backend/file/gnc-backend-file.c: Apply sam's patch:
	  don't allow selection of directory for save file

	* src/business/business-reports/Makefile.am: add fancy-invoice report
	* src/business/business-reports/business-reports.scm: load the fancy-invoice
	* src/business/business-reports/fancy-invoice.scm: a fancy invoice
	  report, to show what else is possible.  It's not really useful per
	  se, but it is another example for users.  To be useful it requires
	  some custom editing.  Thanks to Oliver Jones for submitting the
	  changes.

2003-06-19  Chris Lyttle  <chris@wilddev.net>

	* src/scm/help-topics-index.scm: add Jon Lapham's patch

2003-06-18  Christian Stimming  <stimming@tuhh.de>
